# tmplot.py

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py  test.sh  tmplot.py
.github/workflows/: python_format.yaml  python_lint.yaml  ruff.yml  test.yml
data/: gauss.4.5.10k.txt  grauss.0.1.10k.txt  grauss.3.3.20k.txt  sample.csv  sample.txt  sample.xvg  sample2.txt  tag1.txt  window_data.txt
test/: gen_gauss.sh
tmplot/: asm.py  cat.py  cli.py  common.py  hist.py  logger.py  plot.py  scatter.py  util.py
tmplot/cat/: common.py  hist.py  plot.py  scatter.py
tmplot/single/: common.py  hist.py  plot.py  scatter.py
tmplot/twin/: common.py  plot.py  scatter.py
