[project]
name = "tmplot.py"
version = "0.4.1"
description = "One liner Plotter that supports file and pipe input for quick visualization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
]

[project.urls]
Repository = "https://github.com/th2ch-g/tmplot.py"

[project.scripts]
tmplot = "tmplot.__main__:main"

[tool.setuptools.packages.find]
where = ["tmplot"]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
