[project]
name = "tmplot"
version = "0.4.2"
description = "One liner Plotter that supports file and pipe input for quick visualization"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "numpy",
]

[project.urls]
Repository = "https://github.com/th2ch-g/tmplot"

[project.scripts]
tmplot = "tmplot.__main__:main"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
]
